--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,6 +2,7 @@ name: svg_assets_generator
 description: SVG assets generator.
 repository: https://github.com/VadimMalykhin/svg_assets_generator
 publish_to: "none"
+version: 1.0.0
 
 environment:
   sdk: ^3.10.1
